--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <link rel="stylesheet" href="css/style.css" />
-  <script defer src="js/app.js"></script><link href=".dist/css/style.css" rel="stylesheet"></head>
+  <script defer src="js/app.js"></script><link href="./dist/css/style.css" rel="stylesheet"></head>
   <body>
     <div class="container">
       <h1>About</h1>
