--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href=".dist/css/style.css" />
-  <script defer src="js/app.js"></script><link href=".dist/css/style.css" rel="stylesheet"></head>
+  <script defer src="js/app.js"></script><link href="./dist/css/style.css" rel="stylesheet"></head>
   <body>
     <div class="grid-container">
 
